manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webrouter
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: fe-nginx
      port:
        number: 80
  rules:
#    - host: pipeline-ascicdk8s-1a18.db51c362f6e44b069ddb.westeurope.aksapp.io
    -  http:
        paths:
          - path: /trackerdata/
            pathType: ImplementationSpecific
            backend:
                service:
                  name: be-nginx
                  port:
                    number: 8080
          - path: /
            pathType: ImplementationSpecific
            backend:
                service:
                  name: fe-nginx
                  port:
                    number: 80
